Add as link to this file on GitHub

--- a/tw5tribalknowledge.html
+++ b/tw5tribalknowledge.html
@@ -229,6 +229,8 @@ Error message and password prompt
 
 <li>TextReferences</li>
 
+<li>This File on GitHub</li>
+
 <li>Top menu + toolbar and other toolbars</li>
 
 <li>TopicListTemplate</li>
@@ -8874,7 +8876,7 @@ Error message and password prompt
 <div created="20140304203436910" modified="20140305172333668" title="$:/SiteTitle">
 <pre>TW5 Tribal Knowledge</pre>
 </div>
-<div list="[[Knowledge Base]] [[Other Helpful Tips and Example TiddlyWikis]] WikiText Pandoc" title="$:/StoryList">
+<div list="[[Knowledge Base]] GettingStarted [[Using TiddlyWiki on TiddlyDesktop]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20140315203333234" modified="20140929002321073" tags="$:/tags/stylesheet" title="$:/StyleSheet" type="text/css">
@@ -8924,7 +8926,7 @@ html h2 {
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///C:/Users/rskwo/Downloads/tw5tribalknowledge.html&quot;
+            &quot;text&quot;: &quot;file:///D:/Git/tw5tribalknowledge/tw5tribalknowledge.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -8944,7 +8946,7 @@ html h2 {
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/C:/Users/rskwo/Downloads/tw5tribalknowledge.html&quot;
+            &quot;text&quot;: &quot;/D:/Git/tw5tribalknowledge/tw5tribalknowledge.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -9383,6 +9385,9 @@ Update: See the [[Books]] Tiddler for the solution</pre>
 <div blurb="Link to details explaining ~TextReferences" created="20140306210207420" modified="20140315195730392" subtopic="Syntax" tags="[[Knowledge Base]]" title="TextReferences">
 <pre>A ~TextReference identifies a chunk of text from a tiddler that can be retrieved or modified depending on the context.
 http://tiddlywiki.com/static/TextReference.html</pre>
+</div>
+<div blurb="Help me keep this file up to date on Git Hub" created="20180605165201485" modified="20180605165551345" subtopic=".General" tags="[[Knowledge Base]]" title="This File on GitHub">
+<pre>I keep a copy of this file on [[GitHub |https://github.com/TechLifeWeb/tw5tribalknowledge]]if you want to update me with modifications.</pre>
 </div>
 <div blurb="" created="20140313204927853" modified="20140315191743038" subtopic="UI Changes" tags="[[Knowledge Base]]" title="Top menu + toolbar and other toolbars">
 <pre>This guide describes how to:
