Added notes about WebDAV

--- a/tw5tribalknowledge.html
+++ b/tw5tribalknowledge.html
@@ -225,6 +225,8 @@ Error message and password prompt
 
 <li>Problems</li>
 
+<li>Saving via WebDAV the Easy Way</li>
+
 <li>StandardNoteTemplate</li>
 
 <li>TextReferences</li>
@@ -8876,7 +8878,7 @@ Error message and password prompt
 <div created="20140304203436910" modified="20140305172333668" title="$:/SiteTitle">
 <pre>TW5 Tribal Knowledge</pre>
 </div>
-<div list="[[Knowledge Base]] GettingStarted [[Using TiddlyWiki on TiddlyDesktop]]" title="$:/StoryList">
+<div list="[[Knowledge Base]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20140315203333234" modified="20140929002321073" tags="$:/tags/stylesheet" title="$:/StyleSheet" type="text/css">
@@ -9378,6 +9380,9 @@ Filtering is working because Magazine Title B is not showing up in lists because
 
 -----
 Update: See the [[Books]] Tiddler for the solution</pre>
+</div>
+<div blurb="Notes from the Google Group" created="20180605225935632" modified="20180605230110052" subtopic="WebDav" tags="[[Knowledge Base]]" title="Saving via WebDAV the Easy Way">
+<pre>From the Google group: [[Saving via WebDAV the Easy Way|https://groups.google.com/forum/#!topic/tiddlywiki/EgJrutChcNc/discussion]]</pre>
 </div>
 <div blurb="" created="20140306044820770" modified="20140313204926717" subtopic="" title="StandardNoteTemplate">
 <pre></pre>
