Added some notes from Eric Shulman

--- a/tw5tribalknowledge.html
+++ b/tw5tribalknowledge.html
@@ -147,6 +147,12 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/tab--289919753</li>
+
+<li>$:/state/tab-1606714058</li>
+
+<li>$:/state/tab/sidebar--1835078512</li>
+
 <li>$:/StoryList</li>
 
 <li>$:/StyleSheet</li>
@@ -193,6 +199,8 @@ Error message and password prompt
 
 <li>Google+ TiddlyWiki Community</li>
 
+<li>Hiding removing the last modified date</li>
+
 <li>How to: Import TW5 standalone to TW5 Node instance</li>
 
 <li>Knowledge Base</li>
@@ -238,6 +246,8 @@ Error message and password prompt
 <li>TopicListTemplate</li>
 
 <li>Using TiddlyWiki on TiddlyDesktop</li>
+
+<li>Variables, Fields and Filters in TiddlyWiki</li>
 
 <li>WikiText</li>
 
@@ -8819,55 +8829,7 @@ Error message and password prompt
 <div status="complete" title="$:/Import">
 <pre>The following tiddlers were imported:
 
-# [[$:/core/ui/SideBarLists]]
-# [[$:/DefaultTiddlers]]
-# [[$:/Import]]
-# [[$:/isEncrypted]]
-# [[$:/SiteSubtitle]]
-# [[$:/SiteTitle]]
-# [[$:/StyleSheet]]
-# [[$:/TabBooks]]
-# [[$:/theme]]
-# [[$:/themes/tiddlywiki/snowwhite]]
-# [[$:/themes/tiddlywiki/vanilla]]
-# [[A button that creates a tiddler with a template]]
-# [[Add a Tab To the Sidebar]]
-# [[Book Title A]]
-# [[Book Title B]]
-# [[Books]]
-# [[Creating a Tiddler with Tabs]]
-# [[Creating Tabs From Dynamic Tiddlers]]
-# [[Creating Tabs From Static Tiddlers]]
-# [[Embed a Remember The Milk list in a Tiddler]]
-# [[Example of YouTube Video in Tiddler]]
-# [[Examples]]
-# [[Getting Started with Node.js on Windows]]
-# [[GettingStarted]]
-# [[Google Group]]
-# [[Google Now(ish) Cards Style]]
-# [[Google+ TiddlyWiki Community]]
-# [[How to: Import TW5 standalone to TW5 Node instance]]
-# [[Knowledge Base]]
-# [[Magazine Title A]]
-# [[Magazine Title B]]
-# [[Markdown Demo]]
-# [[Modifying the View Template]]
-# [[Movie Title A]]
-# [[Movie Title B]]
-# [[Movie Title C]]
-# [[Movie Title D]]
-# [[Movie Title E]]
-# [[Movies]]
-# [[MyTab]]
-# [[Other Helpful Tips and Example TiddlyWikis]]
-# [[Pandoc]]
-# [[Problems]]
-# [[StandardNoteTemplate]]
-# [[TextReferences]]
-# [[Top menu + toolbar and other toolbars]]
-# [[TopicListTemplate]]
-# [[Using TiddlyWiki on TiddlyDesktop]]
-# [[WikiText]]</pre>
+# [[Variables, Fields and Filters in TiddlyWiki]]</pre>
 </div>
 <div title="$:/isEncrypted">
 <pre>no</pre>
@@ -8878,7 +8840,16 @@ Error message and password prompt
 <div created="20140304203436910" modified="20140305172333668" title="$:/SiteTitle">
 <pre>TW5 Tribal Knowledge</pre>
 </div>
-<div list="[[Knowledge Base]]" title="$:/StoryList">
+<div created="20180605234031573" modified="20180605235028807" title="$:/state/tab--289919753">
+<pre>Creating Tabs From Static Tiddlers</pre>
+</div>
+<div created="20180605234924310" modified="20180605234929869" title="$:/state/tab-1606714058">
+<pre>$:/TabBooks</pre>
+</div>
+<div created="20180605234008006" modified="20180605234008006" title="$:/state/tab/sidebar--1835078512">
+<pre>MyTab</pre>
+</div>
+<div list="[[Variables, Fields and Filters in TiddlyWiki]] $:/Import [[Knowledge Base]] [[Creating a Tiddler with Tabs]] [[Add a Tab To the Sidebar]] MyTab $:/tags/SideBar [[Modifying the View Template]] Movies" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20140315203333234" modified="20140929002321073" tags="$:/tags/stylesheet" title="$:/StyleSheet" type="text/css">
@@ -8928,7 +8899,7 @@ html h2 {
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///D:/Git/tw5tribalknowledge/tw5tribalknowledge.html&quot;
+            &quot;text&quot;: &quot;file:///C:/Users/skingery/Documents/GitHub/tw5tribalknowledge/tw5tribalknowledge.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -8948,7 +8919,7 @@ html h2 {
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/D:/Git/tw5tribalknowledge/tw5tribalknowledge.html&quot;
+            &quot;text&quot;: &quot;/C:/Users/skingery/Documents/GitHub/tw5tribalknowledge/tw5tribalknowledge.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -8960,11 +8931,11 @@ html h2 {
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1280&quot;
+            &quot;text&quot;: &quot;1920&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;720&quot;
+            &quot;text&quot;: &quot;1080&quot;
         }
     }
 }</pre>
@@ -9106,10 +9077,10 @@ See [[MyTab]] as an example.</pre>
 <div created="20140304203010940" modified="20140309171729343" subtopic="Poetry" tags="Books" title="Book Title A">
 <pre>Lots of details about Book A</pre>
 </div>
-<div created="20140304203129064" modified="20140309171736648" subtopic="Drama" tags="Books" title="Book Title B">
+<div created="20140304203129064" modified="20180605234717831" subtopic="Drama" tags="Books" title="Book Title B">
 <pre>Lots of details about Book B</pre>
 </div>
-<div blurb="Filters: Example of how to make list of subtopics in answer to [[Problems]] I was having" created="20140304203222517" modified="20140929012504741" subtopic="Syntax" tags="[[Knowledge Base]]" title="Books">
+<div blurb="Filters: Example of how to make list of subtopics in answer to [[Problems]] I was having" created="20140304203222517" modified="20180605234821015" subtopic="Syntax" tags="[[Knowledge Base]]" title="Books">
 <pre>\define MyFilter()
 [tag[$(MyTag)$]subtopic{!!subtopic}sort[title]]
 \end
@@ -9288,6 +9259,26 @@ You make your own style sheet by:
 <div blurb="" created="20140315185726467" modified="20140315195630229" subtopic="Community" tags="[[Knowledge Base]]" title="Google+ TiddlyWiki Community">
 <pre>https://plus.google.com/communities/117285869700890736959</pre>
 </div>
+<div blurb="" created="20180605233633157" modified="20180605233927412" subtopic="UI Changes" tags="[[Knowledge Base]]" title="Hiding removing the last modified date">
+<pre>Put this text in tiddler
+
+```
+.tc-story-river .tc-subtitle{ display:none; }
+```
+
+Give tiddler a tag:
+
+```
+$:/tags/Stylesheet
+```
+
+
+Change type of tiddler:
+
+```
+text/css
+```</pre>
+</div>
 <div blurb="You have a standard TW5 HTML file and want to start using Node.js" created="20140306211213956" modified="20140317014127407" subtopic="node.js" tags="[[Knowledge Base]]" title="How to: Import TW5 standalone to TW5 Node instance">
 <pre>Jeremy Ruston explains here:
 https://groups.google.com/d/msg/tiddlywiki/qxfH1fBqACA/AYhwI8qdPosJ</pre>
@@ -9309,7 +9300,7 @@ https://groups.google.com/d/msg/tiddlywiki/qxfH1fBqACA/AYhwI8qdPosJ</pre>
 &lt;$transclude field=&quot;blurb&quot;/&gt;
 &lt;/div&gt;&lt;/div&gt;&lt;/$list&gt;&lt;/$list&gt;&lt;/$set&gt;</pre>
 </div>
-<div created="20140304203906199" modified="20140304204102473" subtopic="Comedy" title="Magazine Title A">
+<div created="20140304203906199" modified="20180605234536813" subtopic="Comedy" title="Magazine Title A">
 <pre>Note: This tiddler is NOT tagged but does have a subtopic of Comedy</pre>
 </div>
 <div created="20140304204517507" modified="20140304204616655" subtopic="Travel" title="Magazine Title B">
@@ -9338,7 +9329,7 @@ https://groups.google.com/d/msg/tiddlywiki/f2qjeiwn37U/8VUJcIZu5agJ</pre>
 <div created="20140304205405822" modified="20140304205446772" subtopic="" tags="Movies" title="Movie Title E">
 <pre>Note: Tiddler is tagged Movies but has NO subtopic</pre>
 </div>
-<div blurb="Sample of the problem I was having with filters" created="20140304202943942" modified="20140929012406165" subtopic="Filters" title="Movies">
+<div blurb="Sample of the problem I was having with filters" created="20140304202943942" modified="20180605234823871" subtopic="Filters" title="Movies">
 <pre>&lt;$list filter=&quot;[is[current]tagging[]has[subtopic]each[subtopic]sort[subtopic]]&quot;&gt;
 &lt;div class=&quot;tc-menu-list-item&quot;&gt;
 &lt;$view field=&quot;subtopic&quot;/&gt;
@@ -9424,6 +9415,63 @@ http://tw5toolbar.tiddlyspot.com/</pre>
 <div blurb="" created="20140307205949413" modified="20140315195659051" subtopic="Tools" tags="[[Knowledge Base]]" title="Using TiddlyWiki on TiddlyDesktop">
 <pre>An alternative to running inside a browser is to use [[TiddlyDesktop|http://tiddlywiki.com/static/Using%2520TiddlyWiki%2520on%2520TiddlyDesktop.html]]. It is lightweight, simply unzip and run. Details here: 
 http://tiddlywiki.com/static/Using%2520TiddlyWiki%2520on%2520TiddlyDesktop.html</pre>
+</div>
+<div blurb="Eric Shulman's notes" created="20180606000501910" modified="20180606000645980" subtopic="Syntax" tags="[[Eric Shulman]] [[Knowledge Base]]" title="Variables, Fields and Filters in TiddlyWiki">
+<pre>!! Types of Brackets
+
+Brackets are used to indicate the ''type of operand'':
+
+* `[]` - square brackets surround ''literal'' values, 
+* `{}` - curly braces around ''field references'', 
+* `&lt;&gt;` - angle brackets around ''variable names''.  
+
+!! Single or Double Brackets - `&lt;` vs `&lt;&lt;`
+In TiddlyWiki ''content'', ''variables'' and ''macros'' are referenced using `&lt;&lt;variableName&gt;&gt;`.  The ''double''-bracket syntax is used to avoid conflicts with standard HTML syntax (i.e., `&lt;b&gt;` starts normal HTML bold formatting, while `&lt;&lt;b&gt;&gt;` embeds the value of a TiddlyWiki variable named &quot;b&quot;).
+
+However, ''within'' TiddlyWiki ''filters'', there is no need to double the brackets, as HTML is not allowed ''within'' the filter, so only single `&lt;variableName&gt;` is used.
+
+Thus, inside a filter we can use a pair of ''single'' angle brackets, like this:
+
+```
+&lt;$list filter=&quot;[is[current]!has&lt;eachfield&gt;]&quot; variable=null&gt;
+```
+
+!! Brackets within filters
+
+&lt;&lt;&lt;
+Why I don't have to wrap `&lt;fieldname&gt;` with `[&lt;fieldname&gt;]` in a filter? 
+&lt;&lt;&lt;
+
+
+Think of the brackets in filters as part of the operand itself rather than a &quot;container&quot; for the operand.  As explained above, the type of bracket indicates the type of operand being used:
+
+* use `[...]` for ''literal'' values, e.g., `[texthere]`
+* use `{...}` for ''field'' references, e.g., `{!!fieldname}`
+* use `&lt;...&gt;` for ''variables'' e.g. `&lt;currentTiddler&gt;`
+
+Thus, to split the literal text, &quot;sometext&quot;, you could write: `[title[sometext]splitbefore[t]removesuffix[t]]`
+you would get &quot;some&quot; as a result:
+
+Ex: `&lt;&lt;list-links &quot;[title[sometext]splitbefore[t]removesuffix[t]]&quot;&gt;&gt;`
+
+&lt;&lt;list-links &quot;[title[sometext]splitbefore[t]removesuffix[t]]&quot;&gt;&gt;
+
+If the value &quot;sometext&quot; is stored in a field named &quot;somefield&quot; in the current tiddler, you could write: `[{!!somefield}splitbefore[t]removesuffix[t]]`
+
+and, if the value &quot;sometext&quot; is stored in a variable named &quot;somevariable&quot;, you could write: `[&lt;somevariable&gt;splitbefore[t]removesuffix[t]]`
+
+As a slightly more complex example, suppose the value to split on was also stored in a variable.  Then you could write:
+ `[&lt;somevariable&gt;splitbefore&lt;othervariable&gt;removesuffix&lt;othervariable&gt;]`
+
+hope this helps,
+
+enjoy,
+-e
+Eric Shulman
+
+-----
+
+Note: These notes were found in the [[Google TiddlyWiki Dev group|https://groups.google.com/forum/#!topic/tiddlywiki/7xlxfZf72CA]]</pre>
 </div>
 <div blurb="Link to the static ~WikiText page" created="20140305171017376" modified="20140315195712663" subtopic="Syntax" tags="[[Knowledge Base]]" title="WikiText">
 <pre>http://tiddlywiki.com/static/WikiText.html
